# AI_MusicHardware

./: .gitignore  CMakeLists.txt  CMakeLists.txt.new  MULTI_TIMBRAL_DEMO.md  PROJECT_UPDATES_2025_03_13.md  README.md  SOUND_TEST.md  build.sh  dummy_iot  midi_cc_mappings.json  mqtt_guide  mqtt_test  test_cc_mappings.json  test_effects.sh  test_filter.cpp  test_sdl_render  test_shutdown.sh  test_slider.sh
References/: IoT Paho MQTT EE513 Assignment 2 (2023_24).docx  IoT Paho MQTT EE513 Assignment 2.md
References/IoT Paho MQTT Part Implementation Assignment 2/: JsonParse.cpp  README.md  app  publish  publish.cpp  publish_roll  publish_roll.cpp  subscribe  subscribe.cpp  subscribe_actuator  subscribe_actuator.cpp  test.c
cmake/: FindRtAudio.cmake  FindRtMidi.cmake
docs/: ADAPTIVE_SEQUENCER.md  ADVANCED_FILTER_SYSTEM.md  AIMusicHardware_TODOs.md  AIMusicHardware_TODOs.txt  AIMusicHardware_TODOs_Updated.md  BEST_IN_CLASS_SEQUENCER.md  BUG_FIXES_LOG.md  ClaudeConversationSummary.md  ClaudeConversationSummary.txt  DOCUMENTATION_STRUCTURE.md  EFFECTS_PROCESSING.md  ESP32_ENCLOSURE_DESIGN.md  ESP32_HARDWARE_DESIGN.md  ESP32_SCHEMATICS.md  EVENT_SYSTEM_IMPLEMENTATION.md  GAME_AUDIO_SEQUENCER_ENHANCEMENT.md  HARDWARE_DESIGN_TOOLS.md  HARDWARE_PROTOTYPING_GUIDE.md  HORIZONTAL_RESEQUENCING_IMPLEMENTATION.md  IDEAS.md  IOT_INTEGRATION.md  IOT_INTEGRATION_IMPLEMENTATION.md  IOT_INTEGRATION_IMPLEMENTATION_UPDATES.md  IOT_MQTT_GUIDE.md  IOT_TECHNICAL_REFERENCE.md  MIDI_EFFECT_CONTROL.md  MIDI_KEYBOARD_GUIDE.md  MPE_DETAILED_IMPLEMENTATION.md  MPE_IMPLEMENTATION_PLAN.md  MPE_OVERVIEW.md  MPE_VOICE_MANAGER.md  MQTT_IMPLEMENTATION_GUIDE.md  MQTT_INTERFACE.md  MULTI_TIMBRAL_ARCHITECTURE.md  OSCILLATOR_STACKING.md  PARAMETER_SYSTEM_IMPLEMENTATION.md  PHASE4_PRODUCTION_POLISH_COMPLETE.md  PRESET_MANAGEMENT_IMPLEMENTATION_ROADMAP.md  PRESET_MANAGEMENT_SYSTEM.md  PROJECT_STATUS.md  (+28 more)
examples/: AdvancedFilterDemo.cpp  AudioEngineStressTest.cpp  ComprehensiveMQTTTest.cpp  ComprehensiveUITest.cpp  DummyIoTConfigManagerDemo.cpp  DummyMQTTTest.cpp  EnhancedPresetDatabaseTest.cpp  EnhancedUIIntegrationTest.cpp  GridEnhancementsDemo.cpp  IoTConfigManagerDemo.cpp  IoTEventIntegrationTest.cpp  IoTParameterDemo.cpp  IoTParameterIntegrationTest.cpp  MidiCCLearningTest.cpp  MidiKeyboardDemo.cpp  MidiKeyboardEffectsDemo.cpp  MidiKeyboardTest.cpp  MultiTimbralDemo.cpp  OscillatorStackDemo.cpp  PahoMQTTCTest.cpp  ParameterSmoothingTest.cpp  ParameterSmoothingTestSimple.cpp  Phase3SmartFeaturesDemo.cpp  Phase4ProductionTestSuite.cpp  PresetBrowserUIDemo.cpp  PresetManagerDemo.cpp  QuickMQTTTest.cpp  RealMQTTTest.cpp  SimpleAudioTest.cpp  SimpleMQTTInterfaceTest.cpp  SimpleMQTTTest.cpp  SimplePresetManagerDemo.cpp  SimpleTest.cpp  SimpleUIDemo.cpp  SimplifiedPresetDemo.cpp  SynchronizedSequencerDemo.cpp  TestAdaptiveSequencer.cpp  TestAudio.cpp  TestEffectControls.cpp  TestLFO.cpp  (+10 more)
firmware/esp32_sensor_node/: config.h  main.cpp  platformio.ini
include/ai/: LLMInterface.h  PresetMLAnalyzer.h  PresetRecommendationEngine.h  SmartCollectionManager.h
include/audio/: AudioEngine.h  AudioErrorHandler.h  Synthesizer.h
include/effects/: AdvancedFilter.h  AllEffects.h  BassBoost.h  BitCrusher.h  CombFilter.h  Compressor.h  Distortion.h  EQ.h  EffectProcessor.h  EffectUtils.h  Filter.h  FormantFilter.h  LadderFilter.h  MidiEffectControl.h  Modulation.h  Phaser.h  ReorderableEffectsChain.h  Saturation.h
include/events/: Event.h  EventBus.h  EventListener.h
include/hardware/: HardwareInterface.h
include/iot/: DummyIoTInterface.h  IoTConfigManager.h  IoTDevice.h  IoTEventAdapter.h  IoTInterface.h  IoTParameterTypes.h  MQTTInterface.h  mqtt_include.h
include/midi/: MidiCCLearning.h  MidiInterface.h  MidiManager.h  MpeChannelAllocator.h  MpeConfiguration.h  MultiTimbralMidiRouter.h
include/mqtt/: async_client.h  buffer_ref.h  buffer_view.h  callback.h  client.h  connect_options.h  create_options.h  delivery_token.h  disconnect_options.h  event.h  exception.h  export.h  iaction_listener.h  iasync_client.h  iclient_persistence.h  message.h  platform.h  properties.h  reason_code.h  response_options.h  server_response.h  ssl_options.h  string_collection.h  subscribe_options.h  thread_queue.h  token.h  topic.h  topic_matcher.h  types.h  will_options.h
include/sequencer/: AdaptiveSequencer.h  MidiFile.h  Sequencer.h
include/ui/: DisplayManager.h  DropdownMenu.h  Font.h  GridLayout.h  MidiKeyboard.h  ParameterBridge.h  ParameterManager.h  ParameterUpdateQueue.h  PresetBrowser.h  PresetBrowserUIComponent.h  PresetManager.h  PresetSaveDialog.h  PresetSelector.h  SmoothParameter.h  SynthKnob.h  UIComponents.h  UIContext.h  UserInterface.h  VisualizationComponents.h
src/: main.cpp  main_grid_enhanced.cpp  main_grid_layout.cpp  main_integrated.cpp  main_integrated_improved.cpp  main_integrated_simple.cpp  test_sdl_render.cpp  test_simple_ui.cpp
src/ai/: LLMInterface.cpp  PresetMLAnalyzer.cpp  PresetRecommendationEngine.cpp  SmartCollectionManager.cpp
src/audio/: AudioEngine.cpp  AudioErrorHandler.cpp  Synthesizer.cpp
src/effects/: AdvancedFilter.cpp  BassBoost.cpp  BitCrusher.cpp  CombFilter.cpp  Compressor.cpp  Delay.cpp  Distortion.cpp  EQ.cpp  EffectProcessor.cpp  Filter.cpp  FormantFilter.cpp  LadderFilter.cpp  MidiEffectControl.cpp  Modulation.cpp  Phaser.cpp  ReorderableEffectsChain.cpp  Reverb.cpp  Saturation.cpp
src/events/: Event.cpp  EventBus.cpp
src/hardware/: HardwareInterface.cpp
src/iot/: IoTConfigManager.cpp  IoTDevice.cpp  IoTEventAdapter.cpp  IoTParameterConverter.cpp  MQTTInterface.cpp
src/midi/: MidiCCLearning.cpp  MidiInterface.cpp  MidiManager.cpp  MpeChannelAllocator.cpp  MpeConfiguration.cpp  MultiTimbralMidiRouter.cpp
src/sequencer/: AdaptiveSequencer.cpp  MidiFile.cpp  Sequencer.cpp
src/ui/: DisplayManager.cpp  DropdownMenu.cpp  FilterVisualizer.cpp  Font.cpp  GridLayout.cpp  MidiKeyboard.cpp  ParameterBridge.cpp  ParameterManager.cpp  ParameterUpdateQueue.cpp  PresetBrowserUIComponent.cpp  SmoothParameter.cpp  SynthKnob.cpp  UIComponents.cpp  (+3 more)
tools/: install_mqtt_libs.sh
(+65 files in other folders)
